@@ -69,6 +69,7 @@ Thank you to Damilola for his work, and to Google for sponsoring this project.
  * Remove unnecessary usage of `innerHTML` when modifying DOM content (LB (Ben) Johnston)
  * Avoid `ValueError` when extending `PagesAPIViewSet` and setting `meta_fields` to an empty list (Henry Harutyunyan, Alex Morega)
  * Improve accessibility for header search, remove autofocus on page load, advise screen readers that content has changed when results update (LB (Ben) Johnston)
+ * Fix incorrect override of `PagePermissionHelper.user_can_unpublish_obj()` in ModelAdmin (Sébastien Corbin)
 
 ### Documentation
 
